force-app/main/default/objects/FEC_Master_Data_Integration__c/FEC_Master_Data_Integration__c.object-meta.xml
<CustomObject>
    <label>FEC Master Data Integration</label>
    <nameField>
        <label>FEC Master Data Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Master Data IntegrationS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>