force-app/main/default/objects/FEC_Master_Data_Integration__c/fields/FEC_ApplyTo__c.field-meta.xml
<CustomField>
    <fullName>FEC_ApplyTo__c</fullName>
    <label>ApplyTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>