force-app/main/default/objects/FEC_Master_Data_Integration__c/fields/FEC_PosOrder__c.field-meta.xml
<CustomField>
    <fullName>FEC_PosOrder__c</fullName>
    <label>PosOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>