force-app/main/default/objects/FEC_Master_Data_Integration__c/fields/FEC_Source_Enum_Value__c.field-meta.xml
<CustomField>
    <fullName>FEC_Source_Enum_Value__c</fullName>
    <label>Source Enum Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>