force-app/main/default/objects/FEC_Master_Data_Integration__c/fields/FEC_Source_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Source_Field_Type__c</fullName>
    <label>Source Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>