force-app/main/default/objects/FEC_Master_Data_Integration__c/fields/FEC_Source_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Source_Parent_Id__c</fullName>
    <label>Source Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>